[package]
name = "codex-app-server-platform"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_app_server_platform"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
codex-client = { path = "../codex-client", default-features = false }
http = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.85"
wasm-bindgen = "0.2.108"
wasm-bindgen-futures = "0.4.58"
